--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,7 +6,7 @@
 @import "settings";
 
 /* Vendor */
-@import '../node_modules/normalize.css/normalize';
+@import '../../node_modules/normalize.css/normalize';
 
 /* Base */
 @import "base";
