--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,7 @@
 /* Layouts */
 @import "layout/constrained";
 @import "layout/home";
+@import "layout/nav";
 
 /* Modules */
-@import "modules/box";
+@import "modules/cards";
