Added more menu fixes

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,7 +3,7 @@
    =========================== */
 
 body {
-  background-image: url(//basehold.it/i/24);
+  // background-image: url(//basehold.it/i/24);
   font-family: $font;
 }
 
