--- a/src/styles/layout/nav.css
+++ b/src/styles/layout/nav.css
@@ -3,10 +3,14 @@
    =========================== */
 
 nav {
+  margin: 0;
+  padding: 0;
   display: flex;
 }
 
 nav a {
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   padding: 1.6em;
   flex-grow: 1;
@@ -16,7 +20,7 @@ nav a {
 }
 
 nav a:hover {
-  background: #f5d76e;
+  background: #f7ca18;
   color: #222;
   flex-grow: 1.8;
   transition: all 200ms ease-out;
@@ -26,7 +30,7 @@ nav a:hover {
   nav {
     flex-direction: column;
     a {
-      padding: 0.5em;
+      padding: 0.4785em;
     }
   }
 }
