--- a/src/styles/layout/nav.css
+++ b/src/styles/layout/nav.css
@@ -1,29 +1,27 @@
 /* ===========================
    Layout/Nav
-   =========================== */
+   =========================== 
 
 nav {
   margin: 0;
   padding: 0;
   display: flex;
-}
-
-nav a {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  padding: 1.6em;
-  flex-grow: 1;
-  text-align: center;
-  text-transform: uppercase;
-  transition: all 200ms ease-out;
-}
-
-nav a:hover {
-  background: #f7ca18;
-  color: #222;
-  flex-grow: 1.8;
-  transition: all 200ms ease-out;
+  a {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    padding: 1.6em;
+    flex-grow: 1;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all 200ms ease-out;
+    &:hover {
+      background: #f7ca18;
+      color: #222;
+      flex-grow: 1.8;
+      transition: all 200ms ease-out;
+    }
+  }
 }
 
 @media (max-width: 800px) {
@@ -34,3 +32,4 @@ nav a:hover {
     }
   }
 }
+*/
